2003-05-21 Christian Bayle	<bayle@debian.org>

	* Applied Tony Guntharp (fusion94) patch #366. Description follow
	 when you have private groups in the gforge DB and they
	 have had downloads then they are visible under top
	 download in feature boxes. you still cant actually view
	 the project w/o the proper perms.
	 this is just a quick fix to the sql statement that
	 checks to see if it's private or public and to only
	 display public projects.

2003-05-21 Tom Copeland <tom@infoether.com>

	* common/frs/FRSRelease.class
	Fixed bug # 343; release name field checks were a bit strict.

2003-05-21 Reinhard Spisser <reinhard@spisser.it>

	* www/include/languages/Spanish.tab:
	Applied patch #350: Spanish translation. Thanks to Vincente Ruiz and 
 	his team.
   
2003-05-20 Tom Copeland <tom@infoether.com>

	* www/my/index.php, common/forum/ForumsForUser.class, 
	common/pm/ProjectTasksForUser.class, common/tracker/ArtifactsForUser.class
	Applied patch #349: Refactoring of the www/my/index.php page. Thanks to
	Jeff Fynboh for the code.
	
	* www/top/toplist.php,index.php:
	Made the "Top forum posts" work.

2003-05-19 Tom Copeland <tom@infoether.com>

	* common/include/User.class:
	Applied patch #353: theme and User.class problems

2003-05-17 Tom Copeland <tom@infoether.com>

	* www/top/most_active.php:
	Shortened the activity percentage to two decimal places.
	
	* www/include/languages/Base.tab,www/help/tracker.php:
	Applied patch #348, thanks to Vicente Ruiz for the code.

2003-05-14 Tom Copeland <tom@infoether.com>

	* www/top/most_active.php:
	Fixed bug # 345 - "most active all time" works now.

2003-05-13  Roland Mas  <99.roland.mas@aist.enst.fr>

	* db/20030513.sql: New file.  Adding an "enabled" column to the
	themes table, defaulting to true.

	* www/themes/index.php: Filter on that column when displaying the
	list of themes.

2003-05-13 Tom Copeland <tom@infoether.com>

	* cronjobs/project_weekly_metric.php, 
	cronjobs/project_weekly_metric-backfill.php: